# quarto-error-reporting

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
claude-notes/plans/: 2026-06-29-ariadne-to-annotate-snippets.md
examples/: custom_rendering.rs  renderer_selection.rs
schemas/: json-diagnostic.json  json-pass1-failure.json
src/: builder.rs  catalog.rs  coalesce.rs  diagnostic.rs  json.rs  lib.rs  macros.rs
tests/: schema_drift.rs
xtask/: Cargo.toml
xtask/src/: main.rs
